tests/positive/Termination/Data/Maybe.mjuvix
module Data.Maybe;

  inductive Maybe (a : Type) {
     nothing : Maybe a;
     just : a → Maybe a;
  }

end;